# javacpp-examples

./: README.md
JavaCppExample/: pom.xml
JavaCppExample/cpp/: jniTest.cpp  jnijavacpp.cpp
JavaCppExample/cpp/include/: test.h
JavaCppExample/src/main/java/test/auto/: Add.java
JavaCppExample/src/main/java/test/global/: Test.java
JavaCppExample/src/main/java/test/prest/: Test.java
JavaCppExample/src/main/resources/test/windows-x86_64/: test.lib
JavaCppExample/test/auto/: Add.java
JavaCppExample/test/global/: Test.java
javacpp-test/: CMakeLists.txt
javacpp-test/cpp/: jniTest.cpp  jnijavacpp.cpp  test.cpp  testAdd.cpp
javacpp-test/include/: test.h
